monticore-generator/src/test/resources/cocos/invalid/A2030/A2030e.mc4
package cocos.invalid.A2030;

grammar A2030e {

  interface A extends B;

}
